# accessprobe

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
accessprobe/: __init__.py  cli.py  config.py  detector.py  discovery.py  models.py  reporter.py  session.py  tester.py  utils.py
examples/: basic_idor_test.py  example_config.yaml
